force-app/main/default/objects/conUbxEvent__c/conUbxEvent__c.object-meta.xml
<CustomObject>
    <label>Activity at Investor Event</label>
    <nameField>
        <label>Investor Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity at Investor Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>