force-app/main/default/objects/conUbxEvent__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Feedback to visited Roadshow / Event and meeting with Investor / Shareholder</description>
    <inlineHelpText>Feedback to visited Roadshow / Event and meeting with Investor / Shareholder</inlineHelpText>
    <label>Feedback</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>