force-app/main/default/objects/conUbxEvent__c/fields/Meeting_with__c.field-meta.xml
<CustomField>
    <fullName>Meeting_with__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Meeting with whom from u-blox?</description>
    <inlineHelpText>Meeting with whom from u-blox?</inlineHelpText>
    <label>Meeting with</label>
    <referenceTo>User</referenceTo>
    <relationshipName>conUbxEvents</relationshipName>
    <type>Lookup</type>
</CustomField>