force-app/main/default/objects/conUbxEvent__c/fields/Related_to__c.field-meta.xml
<CustomField>
    <fullName>Related_to__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account this contact is related to</description>
    <label>Related to</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>conUbxEvents</relationshipName>
    <type>Lookup</type>
</CustomField>