force-app/main/default/objects/conUbxEvent__c/fields/ubx_Event__c.field-meta.xml
<CustomField>
    <fullName>ubx_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Event</label>
    <referenceTo>ubxEvent__c</referenceTo>
    <relationshipLabel>Activity at Investor Events</relationshipLabel>
    <relationshipName>conUbxEvents</relationshipName>
    <type>Lookup</type>
</CustomField>